--- a/static/index.html
+++ b/static/index.html
@@ -23,11 +23,13 @@ limitations under the License.
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 
-  <!-- TODO: "Install the <amp-bind> extension" -->
+
   <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+    
+  <!-- Added  <amp-bind> extension -->
   <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
 
   <style amp-custom>
@@ -141,6 +143,57 @@ limitations under the License.
 </head>
 
 <body>
+
+<!-- Initialized slide state with a variable for currently displayed slide -->
+<amp-state id="selected">
+  <script type="application/json">
+    {
+      "slide": 0,
+      "sku": "1001"
+    }
+  </script>
+</amp-state>
+
+<!-- Available shirts. Maps unique string identifier to color and image URL string. -->
+  <amp-state id="shirts">
+    <script type="application/json">
+      {
+        "1001": {
+          "color": "black",
+          "image": "./shirts/black.jpg"
+        },
+        "1002": {
+          "color": "blue",
+          "image": "./shirts/blue.jpg"
+        },
+        "1010": {
+          "color": "brown",
+          "image": "./shirts/brown.jpg"
+        },
+        "1014": {
+          "color": "dark green",
+          "image": "./shirts/dark-green.jpg"
+        },
+        "1015": {
+          "color": "gray",
+          "image": "./shirts/gray.jpg"
+        },
+        "1016": {
+          "color": "light gray",
+          "image": "./shirts/light-gray.jpg"
+        },
+        "1021": {
+          "color": "navy",
+          "image": "./shirts/navy.jpg"
+        },
+        "1030": {
+          "color": "wine",
+          "image": "./shirts/wine.jpg"
+        }
+      }
+    </script>
+  </amp-state>
+
   <header id="header" class="mdl-color--black mdl-color-text--white">
     <amp-img class="menu" src="./img/ic_menu_white_24dp_1x.png" width=24 height=24></amp-img>
     <span class="mdl-color-text--blue">AMP</span>PAREL
@@ -151,19 +204,24 @@ limitations under the License.
     <h5 class="title">MEN'S COTTON CREW NECK<br>LONG SLEEVE T-SHIRT</h5>
     <h6 class="rating"><span class="mdl-color-text--red">★★★★☆</span> <span class="mdl-color-text--grey">(14)</span></h6>
 
-    <!-- TODO: "Add a slide indicator" -->
-    <amp-carousel type="slides" layout="fixed-height" height=250 id="carousel">
-      <!-- TODO: "Changing images in amp-carousel" -->
-      <amp-img width=200 height=250 src="./shirts/black.jpg"></amp-img>
-      <amp-img width=300 height=375 src="./shirts/black.jpg"></amp-img>
-      <amp-img width=400 height=500 src="./shirts/black.jpg"></amp-img>
+   <!-- ADDED SLIDE INDICATOR ON ACTION -->
+    <amp-carousel type="slides" layout="fixed-height" height=250 id="carousel"
+      on="slideChange:AMP.setState({selected: {slide: event.index}})">
+
+      <!-- ADDED DATA BINDINGS TO IMAGES -->
+      <amp-img width=200 height=250 src="./shirts/black.jpg"
+        [src]="shirts[selected.sku].image"></amp-img>
+      <amp-img width=300 height=375 src="./shirts/black.jpg"
+        [src]="shirts[selected.sku].image"></amp-img>
+      <amp-img width=400 height=500 src="./shirts/black.jpg"
+         [src]="shirts[selected.sku].image"></amp-img>
     </amp-carousel>
 
-    <!-- TODO: "Add a slide indicator" -->
+     <!-- Slide indicator element -->
     <p class="dots">
-      <span class="current"></span>
-      <span></span>
-      <span></span>
+      <span [class]="selected.slide == 0 ? 'current' : ''" class="current"></span>
+      <span [class]="selected.slide == 1 ? 'current' : ''"></span>
+      <span [class]="selected.slide == 2 ? 'current' : ''"></span>
     </p>
 
     <form method="post" action-xhr="/shirts/addToCart" target="_top">
@@ -174,7 +232,8 @@ limitations under the License.
           Tip: <amp-selector> functions like an <input> element when nested in a <form>.
           @see https://www.ampproject.org/docs/reference/components/amp-form#inputs-and-fields
         -->
-        <amp-selector name="color">
+        <amp-selector name="color"
+          on="select:AMP.setState({selected: {sku: event.targetOption}})">
           <table>
             <tr>
               <td><amp-img width=40 height=40 option="1001" src="./shirts/swatch/black.jpg" selected></amp-img></td>
