Updated amp-state shirts with data binding. Change shirt element class name based on availability

--- a/static/index.html
+++ b/static/index.html
@@ -155,7 +155,7 @@ limitations under the License.
 </amp-state>
 
 <!-- Available shirts. Maps unique string identifier to color and image URL string. -->
-  <amp-state id="shirts">
+  <amp-state id="shirts" [src]="'/shirts/sizesAndPrices?sku=' + selected.sku">
     <script type="application/json">
       {
         "1001": {
@@ -261,25 +261,23 @@ limitations under the License.
       <div class="options sizes">
         <h6>SIZE :</h6>
 
-        <!-- TODO: "Variable shirt prices" -->
+        <!-- UPDATE CLASS NAME BASED ON SHIRTS AVAILABILITY -->
         <amp-selector name="size">
           <table>
             <tr>
-              <!-- TODO: "Fetching available sizes for a shirt" -->
-              <td>
+              <td [class]="shirts[selected.sku].sizes['XS'] ? '' : 'unavailable'">
                 <div option="XS">XS</div>
               </td>
-              <td>
+              <td [class]="shirts[selected.sku].sizes['S'] ? '' : 'unavailable'">
                 <div option="S">S</div>
               </td>
-              <!-- TODO: "Fetching available sizes for a shirt" -->
-              <td>
+              <td [class]="shirts[selected.sku].sizes['M'] ? '' : 'unavailable'">
                 <div option="M">M</div>
               </td>
-              <td>
+              <td [class]="shirts[selected.sku].sizes['L'] ? '' : 'unavailable'">
                 <div option="L">L</div>
               </td>
-              <td>
+              <td [class]="shirts[selected.sku].sizes['XL'] ? '' : 'unavailable'">
                 <div option="XL">XL</div>
               </td>
             </tr>
